fixed readability, resume on discord issue, renamed vars

--- a/client.new.css
+++ b/client.new.css
@@ -76,8 +76,9 @@ body.non-admin #messages > .message.shiftleft {
 #messages > .message > .content {
     margin-left: 15px;
     margin-bottom: 20px;
-    -webkit-text-stroke: 2px black;
-    font-family: 'Open Sans', sans-serif;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+    font-family: 'Roboto', sans-serif;
     font-size: 32px;
     color: white;
 }
@@ -89,12 +90,13 @@ body.non-admin #messages > .message.shiftleft {
 
 #messages > .long > .content {
     font-size: 20px;
-    -webkit-text-stroke: 1.3px black;
+    -webkit-text-stroke: 0.5px black;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 #messages > .img > img {
     max-height: 500px;
-    max-width: 800px;
+    max-width: 500px;
     padding-left: 75px;
     padding-bottom: 23px;
     transform: translate(-60px, 0px); 
@@ -235,9 +237,6 @@ body.admin .admin-btns {
     grid-template-columns: 30px 30px;
     column-gap: 5px;
     row-gap: 5px;
-
-    width: 0px;
-    transform: translate(-65px, 0px);
 }
 
 body.admin .admin-btns > button {
